--- a/client/package.json
+++ b/client/package.json
@@ -7,18 +7,26 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@types/lodash-es": "^4.17.12",
+    "@hookform/resolvers": "^5.2.2",
     "axios": "^1.6.8",
-    "lodash": "^4.17.21",
-    "openai": "^4.40.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.556.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.23.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -31,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "prettier": "^3.4.2"
   }
 }
