--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,8 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
+    "@types/node": "^24.10.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
@@ -38,8 +40,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0",
-    "prettier": "^3.4.2"
+    "typescript": "^5.9.3",
+    "vite": "^5.2.0"
   }
 }
