--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
       - 'client/**'
+      - '.github/workflows/client.yml'
   pull_request:
     paths:
       - 'client/**'
+      - '.github/workflows/client.yml'
 
 jobs:
   lint-format-build:
