--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
       - 'server/**'
+      - '.github/workflows/server.yml'
   pull_request:
     paths:
       - 'server/**'
+      - '.github/workflows/server.yml'
 
 jobs:
   lint-format-build:
