--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -30,10 +30,7 @@ jobs:
           cache-dependency-path: client/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Rebuild native modules
-        run: npm rebuild
+        run: npm install
 
       - name: Run ESLint
         run: npm run lint
