--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -30,7 +30,7 @@ jobs:
           cache-dependency-path: client/package-lock.json
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run ESLint
         run: npm run lint
