--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "https://weather-app-practice-mcaj.vercel.app/api/:path*"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
