--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -28,7 +28,9 @@ jobs:
 
       - name: Install client dependencies
         working-directory: client
-        run: npm install
+        run: |
+          rm -f package-lock.json
+          npm install
 
       - name: Install Playwright browsers
         working-directory: client
